RESOLVED FIXED 282324
REGRESSION(285852@main): Triggers asserts
https://bugs.webkit.org/show_bug.cgi?id=282324
Summary REGRESSION(285852@main): Triggers asserts
Attachments
Philippe Normand
Comment 1 2024-10-30 02:53:49 PDT
Philippe Normand
Comment 2 2024-10-30 02:55:22 PDT
Thread 1 (Thread 0x7fc8420c5a80 (LWP 2110)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:365 #1 0x00007fc84c188dd2 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:912 #2 0x00007fc84c196e3b in WTF::StringView::StringView(WTF::StringView const&) (this=0x7ffee4c93d80, other=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/text/StringView.h:350 #3 0x00007fc84ea505bc in WTF::StringView::endsWith(WTF::StringView) const (this=0x7ffee4c93e20, suffix=...) at /app/webkit/Source/WTF/wtf/text/StringView.cpp:88 #4 0x00007fc85c54dcfe in WebKit::SystemSettingsManagerProxy::darkMode() const (this=0x7fc8641375e8 <WebKit::SystemSettingsManagerProxy::initialize()::manager>) at /app/webkit/Source/WebKit/UIProcess/gtk/SystemSettingsManagerProxyGtk.cpp:69 #5 0x00007fc85c543797 in WebKit::SystemSettingsManagerProxy::settingsDidChange() (this=0x7fc8641375e8 <WebKit::SystemSettingsManagerProxy::initialize()::manager>) at /app/webkit/Source/WebKit/UIProcess/glib/SystemSettingsManagerProxy.cpp:127 #6 0x00007fc85c54e537 in WebKit::SystemSettingsManagerProxy::SystemSettingsManagerProxy() (this=0x7fc8641375e8 <WebKit::SystemSettingsManagerProxy::initialize()::manager>) at /app/webkit/Source/WebKit/UIProcess/gtk/SystemSettingsManagerProxyGtk.cpp:192 #7 0x00007fc85c546ea5 in WTF::NeverDestroyed<WebKit::SystemSettingsManagerProxy, WTF::AnyThreadsAccessTraits>::NeverDestroyed<>() (this=0x7fc8641375e8 <WebKit::SystemSettingsManagerProxy::initialize()::manager>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NeverDestroyed.h:67 #8 0x00007fc85c5436d9 in WebKit::SystemSettingsManagerProxy::initialize() () at /app/webkit/Source/WebKit/UIProcess/glib/SystemSettingsManagerProxy.cpp:115 #9 0x00007fc85c53f211 in WebKit::Display::Display() (this=0x7fc8641375c8 <WebKit::Display::singleton()::display+8>) at /app/webkit/Source/WebKit/UIProcess/gtk/Display.cpp:58 #10 0x00007fc85c53f7a8 in WTF::LazyNeverDestroyed<WebKit::Display, WTF::AnyThreadsAccessTraits>::constructWithoutAccessCheck<>() (this=0x7fc8641375c0 <WebKit::Display::singleton()::display>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NeverDestroyed.h:132 #11 0x00007fc85c53f445 in WTF::LazyNeverDestroyed<WebKit::Display, WTF::AnyThreadsAccessTraits>::construct<>() (this=0x7fc8641375c0 <WebKit::Display::singleton()::display>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NeverDestroyed.h:122 #12 0x00007fc85c53f099 in operator()() const (__closure=0x7ffee4c94287) at /app/webkit/Source/WebKit/UIProcess/gtk/Display.cpp:47 #13 0x00007fc85c53fafb in std::__invoke_impl<void, WebKit::Display::singleton()::<lambda()> >(std::__invoke_other, struct {...} &&) (__f=...) at /usr/include/c++/13.2.0/bits/invoke.h:61 #14 0x00007fc85c53f800 in std::__invoke<WebKit::Display::singleton()::<lambda()> >(struct {...} &&) (__fn=...) at /usr/include/c++/13.2.0/bits/invoke.h:96 #15 0x00007fc85c53f46b in operator()() const (__closure=0x7ffee4c94260) at /usr/include/c++/13.2.0/mutex:900 #16 0x00007fc85c53f82b in operator()() const (__closure=0x0) at /usr/include/c++/13.2.0/mutex:836 #17 0x00007fc85c53f83c in _FUN() () at /usr/include/c++/13.2.0/mutex:836 #18 0x00007fc842ea71b3 in __pthread_once_slow (once_control=0x7fc8641375e0 <WebKit::Display::singleton()::onceFlag>, init_routine=0x7fc8430efda0 <std::__once_proxy()>) at pthread_once.c:116 #19 0x00007fc85c53f044 in __gthread_once(__gthread_once_t*, void (*)()) (__once=0x7fc8641375e0 <WebKit::Display::singleton()::onceFlag>, __func=0x7fc8430efda0 <std::__once_proxy()>) at /usr/include/c++/13.2.0/x86_64-unknown-linux-gnu/bits/gthr-default.h:700 #20 0x00007fc85c53f4be in std::call_once<WebKit::Display::singleton()::<lambda()> >(std::once_flag &, struct {...} &&) (__once=..., __f=...) at /usr/include/c++/13.2.0/mutex:907 #21 0x00007fc85c53f0c9 in WebKit::Display::singleton() () at /app/webkit/Source/WebKit/UIProcess/gtk/Display.cpp:46 #22 0x00007fc85c52ec3a in operator()() const (__closure=0x7ffee4c94467) at /app/webkit/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:90 #23 0x00007fc85c5360f8 in std::__invoke_impl<void, WebKit::AcceleratedBackingStoreDMABuf::rendererBufferMode()::<lambda()> >(std::__invoke_other, struct {...} &&) (__f=...) at /usr/include/c++/13.2.0/bits/invoke.h:61 #24 0x00007fc85c534218 in std::__invoke<WebKit::AcceleratedBackingStoreDMABuf::rendererBufferMode()::<lambda()> >(struct {...} &&) (__fn=...) at /usr/include/c++/13.2.0/bits/invoke.h:96 #25 0x00007fc85c532ac9 in operator()() const (__closure=0x7ffee4c94440) at /usr/include/c++/13.2.0/mutex:900 #26 0x00007fc85c534243 in operator()() const (__closure=0x0) at /usr/include/c++/13.2.0/mutex:836 #27 0x00007fc85c534254 in _FUN() () at /usr/include/c++/13.2.0/mutex:836 #28 0x00007fc842ea71b3 in __pthread_once_slow (once_control=0x7fc8641375ac <WebKit::AcceleratedBackingStoreDMABuf::rendererBufferMode()::onceFlag>, init_routine=0x7fc8430efda0 <std::__once_proxy()>) at pthread_once.c:116 #29 0x00007fc85c52e8eb in __gthread_once(__gthread_once_t*, void (*)()) (__once=0x7fc8641375ac <WebKit::AcceleratedBackingStoreDMABuf::rendererBufferMode()::onceFlag>, __func=0x7fc8430efda0 <std::__once_proxy()>) at /usr/include/c++/13.2.0/x86_64-unknown-linux-gnu/bits/gthr-default.h:700 #30 0x00007fc85c532b1c in std::call_once<WebKit::AcceleratedBackingStoreDMABuf::rendererBufferMode()::<lambda()> >(std::once_flag &, struct {...} &&) (__once=..., __f=...) at /usr/include/c++/13.2.0/mutex:907 #31 0x00007fc85c52ece7 in WebKit::AcceleratedBackingStoreDMABuf::rendererBufferMode() () at /app/webkit/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:73 #32 0x00007fc85c52ed20 in WebKit::AcceleratedBackingStoreDMABuf::checkRequirements() () at /app/webkit/Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:100 #33 0x00007fc85c52e16b in WebKit::AcceleratedBackingStore::checkRequirements() () at /app/webkit/Source/WebKit/UIProcess/gtk/AcceleratedBackingStore.cpp:71 #34 0x00007fc85c54614d in WebKit::HardwareAccelerationManager::HardwareAccelerationManager() (this=0x7fc864137668 <WebKit::HardwareAccelerationManager::singleton()::manager>) at /app/webkit/Source/WebKit/UIProcess/gtk/HardwareAccelerationManager.cpp:48 #35 0x00007fc85c547a49 in WTF::NeverDestroyed<WebKit::HardwareAccelerationManager, WTF::AnyThreadsAccessTraits>::NeverDestroyed<>() (this=0x7fc864137668 <WebKit::HardwareAccelerationManager::singleton()::manager>) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NeverDestroyed.h:67 #36 0x00007fc85c5460cf in WebKit::HardwareAccelerationManager::singleton() () at /app/webkit/Source/WebKit/UIProcess/gtk/HardwareAccelerationManager.cpp:36 #37 0x00007fc85c583658 in WebKit::WebPreferences::platformInitializeStore() (this=0x7fc838024240) at /app/webkit/Source/WebKit/UIProcess/gtk/WebPreferencesGtk.cpp:41 #38 0x00007fc85c0e044e in WebKit::WebPreferences::WebPreferences(WTF::String const&, WTF::String const&, WTF::String const&) (this=0x7fc838024240, identifier=..., keyPrefix=..., globalDebugKeyPrefix=...) at /app/webkit/Source/WebKit/UIProcess/WebPreferences.cpp:65 #39 0x00007fc85c0e0170 in WebKit::WebPreferences::create(WTF::String const&, WTF::String const&, WTF::String const&) (identifier=..., keyPrefix=..., globalDebugKeyPrefix=...) at /app/webkit/Source/WebKit/UIProcess/WebPreferences.cpp:48 #40 0x00007fc85c0e01de in WebKit::WebPreferences::createWithLegacyDefaults(WTF::String const&, WTF::String const&, WTF::String const&) (identifier=..., keyPrefix=..., globalDebugKeyPrefix=...) at /app/webkit/Source/WebKit/UIProcess/WebPreferences.cpp:53 #41 0x00007fc85c21f75e in WKPreferencesCreate() () at /app/webkit/Source/WebKit/UIProcess/API/C/WKPreferences.cpp:45 #42 0x000055c1c41153ba in WTR::TestController::initialize(int, char const**) (this=0x7ffee4c94a20, argc=26, argv=0x7ffee4c94fe8) at /app/webkit/Tools/WebKitTestRunner/TestController.cpp:653 #43 0x000055c1c4113934 in WTR::TestController::TestController(int, char const**) (this=0x7ffee4c94a20, argc=26, argv=0x7ffee4c94fe8) at /app/webkit/Tools/WebKitTestRunner/TestController.cpp:211 #44 0x000055c1c419290e in main(int, char**) (argc=26, argv=0x7ffee4c94fe8) at /app/webkit/Tools/WebKitTestRunner/gtk/main.cpp:69 STDERR: ASSERTION FAILED: other.underlyingStringIsValid()
EWS
Comment 3 2024-10-30 03:17:33 PDT
Committed 285895@main (76a5ed174d9a): <https://commits.webkit.org/285895@main> Reviewed commits have been landed. Closing PR #35934 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.