REGRESSION(285852@main): Triggers asserts https://bugs.webkit.org/show_bug.cgi?id=282324

Reviewed by Carlos Garcia Campos.

String::fromUTF8() returns a String, not a StringView.

* Source/WebKit/UIProcess/gtk/SystemSettingsManagerProxyGtk.cpp:
(WebKit::SystemSettingsManagerProxy::darkMode const):

Canonical link: https://commits.webkit.org/285895@main